--- a/home.html
+++ b/home.html
@@ -334,7 +334,7 @@
 
 			<div>
 				<h3>צרו קשר להצעות מחיר:</h3>
-				<form method="POST" action="http://formspree.io/mike.penzin@gmail.com">
+				<form method="POST" action="http://formspree.io/arkadypenzin@gmail.com">
 					<div class="form-group">
 				  		<input type="email" class="form-control" name="email" placeholder="אימייל">
 				  	</div>
