--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Vita Tours - ויטה טורס</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -329,23 +330,8 @@
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col-md-8 col-sx-12">
-
-			<div>
-				<h3>צרו קשר להצעות מחיר:</h3>
-				<form method="POST" action="http://formspree.io/arkadypenzin@gmail.com">
-					<div class="form-group">
-				  		<input type="email" class="form-control" name="email" placeholder="אימייל">
-				  	</div>
-				  	<div class="form-group">	
-				  		<textarea name="message" class="form-control" placeholder="תוכן ההודעה"></textarea>
-				  	</div>
-				  <button type="submit" class="btn btn-default">שלח</button>
-				</form>
-			</div>
-		</div>
-		<div class="col-md-4 col-sx-12">	
+	<div class="container row">
+		<div class="col-md-4 col-sx-12">
 			<h3>
 				<span class="intext-logo">ויטה טורס</span>
 			</h3>
@@ -359,6 +345,20 @@
 				מייל: info@yummy.li
 			</p>
 		</div>
+		<div class="col-md-8 col-sx-12">
+			<div>
+				<h3>צרו קשר להצעות מחיר:</h3>
+				<form method="POST" action="http://formspree.io/arkadypenzin@gmail.com">
+					<div class="form-group">
+				  		<input type="email" class="form-control" name="email" placeholder="אימייל">
+				  	</div>
+				  	<div class="form-group">	
+				  		<textarea name="message" class="form-control" placeholder="תוכן ההודעה"></textarea>
+				  	</div>
+				  <button type="submit" class="btn btn-default">שלח</button>
+				</form>
+			</div>	
+		</div>
 	</div>
 </div>
 
@@ -371,37 +371,6 @@
             </a>
         </div>
       </div>
-     <!--  <div class="row">
-        <div class="col-md-4  leftpanel">
-          <div class="row">
-              <div class="col-md-6 col-xs-3">
-                <a href="team.html">About Us</a>
-              </div>
-              <div class="col-md-6 col-xs-3">
-                <a href="team.html#terms">Terms of use</a>
-              </div>
-              <div class="col-md-6 col-xs-3">
-                <a href="team.html#contact">Contact Us</a>
-              </div>
-              <div class="col-md-6 col-xs-3">
-                <a href="signup.html">Sign Up</a>
-              </div>
-          </div> 
-      </div> -->
-      <!-- <div class="col-md-4 col-md-push-4 col-sm-6 right-panel">
-        <div>
-          <form action="https://trvlbids.us10.list-manage.com/subscribe/post" method="post">
-                <input type="hidden" name="u" value="bb683f73a8c73f15986300c4c">
-                <input type="hidden" name="id" value="f5837e18ae">
-                <div class="input-group">
-                  <input type="email" class="form-control" placeholder="הכנס איימייל שלך"  name="MERGE0" id="MERGE0" required>
-                  <span class="input-group-btn">
-                    <input type="submit" class="btn btn-default" value="להירשם">
-                  </span>
-                </div>
-          </form>
-        </div>
-      </div>    --> 
       <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 social-footer">
         <div>
             <a class="btn button-social" href="#" target="blank" role="button">
