--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
 	<title>Vita Tours - ויטה טורס</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--[if lte IE 8]> 
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Parisienne" /> 
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Assistant" />
+	<![endif]-->
 
 </head>
 <body id="myPage" dir="rtl">
