--- a/home.html
+++ b/home.html
@@ -12,7 +12,6 @@
 
 </head>
 <body id="myPage" dir="rtl">
-
     <nav class="navbar navbar-default navbar-fixed-top pull-left">
       <div class="container">
         <div class="navbar-header">
@@ -403,6 +402,7 @@
   <!-- smooth scroll -->
   <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
+  <script type="text/javascript" src="js/flash.js"></script>
 
   <!--Initiate WOW js, can be at the bottom of your file -->
   <script>
@@ -416,14 +416,6 @@
         }
       )
      wow.init();
-
-     $(document).ready(function(){
-
-      /*! Fades in page on load */
-      $('body').css('display', 'none');
-      $('body').fadeIn(1000);
-
-      });
   </script>
 </body>
 </html>
